tests/errors/sem.arg-mismatch.subscript-func-arg-count.or
main :: () -> void {
    @subscript get :: (a: &int) -> &int { return a; };
    get;
};
